# bunzo

./: .gitignore  Dockerfile.builder  LICENSE  README.md
board/: Config.in  external.desc  external.mk
board/bunzo/cm5_nano_a/: config.txt  genimage.cfg.in  post-image.sh
board/bunzo/common/: linux.fragment  post-build.sh
board/bunzo/common/rootfs-overlay/etc/: hostname  motd  os-release
board/bunzo/common/rootfs-overlay/etc/ssh/: sshd_config
board/bunzo/common/rootfs-overlay/etc/ssh/sshd_config.d/: bunzo-dev.conf
board/bunzo/common/rootfs-overlay/etc/systemd/system/: bunzo-provisiond.service  bunzo-provisiond.socket  bunzo-provisioning-reconcile.service  bunzo-schedulerd.service  bunzo-setup-http.service  bunzo-setup-http.socket  bunzo-shell.service  bunzod.service  bunzod.socket
board/bunzo/common/rootfs-overlay/etc/systemd/system/serial-getty@ttyAMA0.service.d/: bunzo-recovery.conf
board/bunzo/common/rootfs-overlay/usr/lib/tmpfiles.d/: bunzo.conf
board/bunzo/configs/: bunzo_qemu_aarch64_defconfig
board/configs/: bunzo_cm5_nano_a_defconfig  bunzo_qemu_aarch64_defconfig
docs/: ARCHITECTURE.md  FOUNDATIONS.md  HARDWARE_REPLAY.md  PROVISIONING.md  ROADMAP.md  VISION.md
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/bunzo-proto/: Cargo.toml
rust/bunzo-proto/src/: lib.rs
rust/bunzo-shell/: Cargo.toml
rust/bunzo-shell/.cargo/: config.toml
rust/bunzo-shell/src/: main.rs
rust/bunzo-skill-abi/: Cargo.toml
rust/bunzo-skill-abi/src/: lib.rs
rust/bunzod/: Cargo.toml
rust/bunzod/src/: config.rs  control_trust.rs  ledger.rs  lib.rs  main.rs  policy.rs  provisioning.rs  runtime.rs  scheduler.rs  setup_http.rs  store.rs
rust/bunzod/src/backend/: mod.rs  openai.rs
rust/bunzod/src/skills/: host.rs  manifest.rs  mod.rs
rust/skills/read-local-file/: Cargo.toml  manifest.toml
rust/skills/read-local-file/src/: lib.rs
scripts/: bootstrap.sh  build-docker.sh  build.sh  measure-bunzod-rss.sh  measure-shell-rss.sh  remote-attach.sh  remote-build.sh  remote-fetch-image.sh  remote-qemu.sh  remote.env.example  run-qemu.sh
