[workspace]
resolver = "2"
members = [
    "bunzo-proto",
    "bunzo-shell",
    "bunzod",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bunzo-proto = { path = "bunzo-proto" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
