[workspace]
resolver = "2"
members = [
    "bunzo-proto",
    "bunzo-shell",
    "bunzo-skill-abi",
    "bunzod",
]
# Skills are built with a different target (`wasm32-unknown-unknown`) and their
# own minimal std/panic setup, so they live outside the default workspace. They
# are built explicitly by `scripts/build.sh`.
exclude = [
    "skills",
]

[workspace.package]
version = "0.0.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bunzo-proto = { path = "bunzo-proto" }
bunzo-skill-abi = { path = "bunzo-skill-abi" }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"
