[package]
name = "bunzo-proto"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "bunzo shell <-> bunzod wire protocol v1 (length-prefixed JSON)"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { version = "1", default-features = false, features = ["io-util"], optional = true }

[features]
default = []
tokio = ["dep:tokio"]
